<resources>
    <string name="app_name">alphaFile</string>
    <string name="note">NOTES</string>
    <string name="meal">MEAL</string>
    <string name="t1">What do you want to buy?</string>
    <string name="MILK">দুধ     ২০/- </string>
    <string name="BREAD">রুটি     ৫/-</string>
    <string name="CURRY">তরকারি     ১৫/-</string>
    <string name="BIRANI">বিরিয়ানি    ৫০/- </string>
    <string name="FISH">মাছ তরকারি    ৪৫/-</string>
    <string name="CHICKEN">মুরগির তরকারি     ৫০/-</string>
    <string name="LEMON">লেবুর শরবত    ১০/-</string>
    <string name="WATER">পানি   ৫/-</string>
    <string name="payment">How do you want to Pay?</string>
    <string name="mobileno">Please Enter your mobile no.</string>
    <string name="t2">How do you want to patment?</string>
    <string name="hill">Please Enter your no.</string>
    <string name="t3">The project is developed by Md salah Uddin and Muhtasim sajat Nehal.</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
