<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#66ffb3"
    tools:context=".meal">

    <TextView
        android:id="@+id/textView"
        android:layout_width="279dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="32dp"
        android:background="#ffff80"
        android:text="@string/t1"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/checkBoxMilk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="106dp"
        android:text="@string/MILK"
        android:textSize="20dp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/checkBoxBread"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/checkBoxMilk"
        android:layout_alignLeft="@+id/checkBoxMilk"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="140dp"
        android:text="@string/BREAD"
        android:textSize="20dp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/checkBoxcurry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/checkBoxMilk"
        android:layout_alignLeft="@+id/checkBoxMilk"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="210dp"
        android:text="@string/CURRY"
        android:textSize="20dp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/checkBoxBirani"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/checkBoxMilk"
        android:layout_alignLeft="@+id/checkBoxMilk"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-1dp"
        android:layout_marginLeft="-1dp"
        android:layout_marginBottom="245dp"
        android:text="@string/BIRANI"
        android:textSize="20dp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/checkBoxFish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/checkBoxMilk"
        android:layout_alignLeft="@+id/checkBoxMilk"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-2dp"
        android:layout_marginLeft="-2dp"
        android:layout_marginBottom="172dp"
        android:text="@string/FISH"
        android:textSize="20dp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/checkBoxChicken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/checkBoxMilk"
        android:layout_alignLeft="@+id/checkBoxMilk"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-1dp"
        android:layout_marginLeft="-1dp"
        android:layout_marginBottom="138dp"
        android:text="@string/CHICKEN"
        android:textSize="20dp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/checkBoxLemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/checkBoxMilk"
        android:layout_alignLeft="@+id/checkBoxMilk"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-2dp"
        android:layout_marginLeft="-2dp"
        android:layout_marginBottom="104dp"
        android:text="@string/LEMON"
        android:textSize="20dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/mealbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="119dp"
        android:layout_marginRight="119dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/buymeal" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mealbtn"
        android:layout_alignStart="@+id/checkBoxLemon"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="7dp"
        android:text=""
        android:layout_alignLeft="@+id/checkBoxLemon"
        android:layout_marginLeft="0dp"
        android:textSize="15dp"
        android:textStyle="bold"/>


</RelativeLayout>